recallable/tests/ui/derive_fail_enum_recall_nested.stderr
error: enum `Recall` derive requires assignment-only variant fields; derive `Recallable` and implement `Recall` or `TryRecall` manually
  --> tests/ui/derive_fail_enum_recall_nested.rs:11:9
   |
11 | /         #[recallable]
12 | |         inner: Inner,
   | |____________________^
